# tetris-generations

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
assets/shaders/: default-transattrb.vert  default.frag  default.vert  solid.frag  solid.vert
entity_macros/: Cargo.toml
entity_macros/src/: containers.rs  entity.rs  lib.rs
imdraw_derive/: .gitignore  Cargo.toml
imdraw_derive/src/: lib.rs
special-thanks/: kenney-input-pixel-art.txt
src/: app.rs  debug.rs  engine.rs  game.rs  game_state.rs  imdraw.rs  imgui_sdl2.rs  main.rs  render.rs  tasks.rs  time.rs
src/app/: animation_system.rs  animations.rs  asset_system.rs  debug.rs  game_state.rs  id_manager.rs  mod.rs  sdl.rs  task_system.rs  tasks.rs  time.rs  time_system.rs  transform.rs  video.rs  video_system.rs
src/app/audio/: mod.rs  system.rs
src/app/entity/: animator.rs  container.rs  mod.rs  traits.rs  transform.rs
src/app/font_system/: char_data.rs  font.rs  mod.rs  packing.rs  render.rs
src/app/imgui/: imdraw.rs  mod.rs
src/app/imgui_wrapper/: imdraw.rs  imgui_sdl2.rs
src/app/input/: button.rs  mapping.rs  mod.rs  system.rs
src/app/input_system/: button.rs  mod.rs  system.rs
src/app/net/: client.rs  server.rs
src/app/network/: client.rs  mod.rs  server.rs
src/app/renderer/: batch.rs  color.rs  draw_call.rs  font.rs  (+11 more)
src/entities/: container.rs  entity.rs  mod.rs
src/game/: input.rs  mod.rs  piece.rs  playfield.rs  randomizer.rs  render.rs  rules.rs
src/linalg/: mat4.rs  mod.rs  vec2.rs  vec2i.rs  vec3.rs
src/render/: color.rs  draw_command.rs  mod.rs  texture.rs  types.rs
(+69 files in other folders)
