[package]
name = "tetris-generations"
version = "0.1.0"
authors = ["Naum Azeredo <naumazeredo@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
gl = "0.14.0"
imgui = "0.6.1"
imgui-opengl-renderer = "0.10.0"
bitflags = "1.2.1"
imdraw_derive = { path = "imdraw_derive" }
rand_pcg = "0.3"
rand_core = "0.6"
enum_dispatch = "0.3"
paste = "1.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image", "ttf", "mixer"]
