[package]
name = "tetris-generations"
version = "0.1.0"
authors = ["Naum Azeredo <naumazeredo@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitflags = "1.3.2"
enum_dispatch = "0.3"
gl = "0.14.0"
imgui = "0.8.2"
imgui-opengl-renderer = "0.11.0"
paste = "1.0"
rand_pcg = "0.3"
rand_core = "0.6"

imdraw_derive = { path = "imdraw_derive" }

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image", "ttf", "mixer"]
